--- a/views/bids.jade
+++ b/views/bids.jade
@@ -3,6 +3,6 @@ extends layout
 block content
   h2 All bids
   ul
-    each source, i in sources
+    each bid in bids
       li
-        a(href="#") #{source}
+        a(href="#") #{bid.passenger + " "  + bid.start_time + " " + bid.source + " " + bid.destination + " " + bid.amount + " " + bid.status}
