add ui in home page

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,11 @@
 extends layout
 
 block content
-  h1 Welcome to #{title}
+  head
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+      
+  body
+    .topnav
+      a.active(href='home') Home
+      a(href='login/signup') Login/Signup
+      a(href='#about') About
