--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,8 @@
 body {
+  background-image: url('b2.jpg');
+  background-repeat: no-repeat;
+  background-size: 1200px 680px;
+  opacity: 0.85;
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
@@ -6,3 +10,28 @@ body {
 a {
   color: #00B7FF;
 }
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  }
+  .topnav {
+  overflow: hidden;
+  background-color: #333;
+  }
+  .topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  }
+  .topnav a:hover {
+  background-color: #ddd;
+  color: black;
+  }
+  .topnav a.active {
+  background-color: rgb(202, 133, 145);
+  color: white;
+  }
