--- a/views/edit_bid.jade
+++ b/views/edit_bid.jade
@@ -2,3 +2,13 @@ extends layout
 
 block content
   h1 #{title}
+  form(method='post', action='/bids/edit')
+    .form-group
+      label Bid_ID:
+      input(name='bid_id', type='text')
+    .form-group
+      label Amount:
+      input(name='amount', type='text')
+    input(type='submit', name='submit', value='Save')
+
+    a(href='/passengers/bids') Back
