--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,9 @@ html
   head
     title= title
     link(rel="stylesheet", href="/bower_components/bootstrap/dist/css/bootstrap.css")
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    //link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+  script(src='/bower_components/jquery/dist/jquery.js')
+  script(src='/bower_components/bootstrap/dist/js/bootstrap.js')
+  script(src='/js/main.js')
