--- a/views/bid.jade
+++ b/views/bid.jade
@@ -1,5 +1,10 @@
 extends layout
 
 block content
-  h1 #{title}
-  p #{bid.source}
+  h1 Bid: #{bid.bid_id}
+  p Source: #{bid.source}
+  p Destination: #{bid.destination}
+  p Start_Time: #{bid.start_time}
+  p Passenger: #{bid.passenger}
+  p Amount: #{bid.amount}
+  p Status: #{bid.status}
