--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,8 @@ extends layout
 block content
   head
     meta(name='viewport', content='width=device-width, initial-scale=1')
-      
+    link(rel='stylesheet', href='/stylesheets/style.css')
+
   body
     .topnav
       a.active(href='home') Home
