modified homepage navi

--- a/views/index.jade
+++ b/views/index.jade
@@ -8,5 +8,6 @@ block content
   body
     .topnav
       a.active(href='home') Home
-      a(href='login/signup') Login/Signup
-      a(href='#about') About
+      a(href='/login') Login
+      a(href='/register') Sign Up
+      a(href='/about') About
