--- a/views/login.jade
+++ b/views/login.jade
@@ -2,6 +2,9 @@ extends layout
 
 block content
   h1 #{title}
+  if errors
+    for each in errors
+        p.error #{each.msg}
   form(method='post', action='/loginAction')
     .form-group
       label Username:
