--- a/views/bids.jade
+++ b/views/bids.jade
@@ -14,3 +14,5 @@ block content
         td #{bid.amount}
         td
           a(class="btn btn-tiny btn-default" href="/bids/edit/#{bid.bid_id}") Edit
+        td
+          a(class="btn btn-tiny btn-danger" href="/bids/delete/#{bid.bid_id}") Delete
