--- a/views/passengerHome.jade
+++ b/views/passengerHome.jade
@@ -8,6 +8,6 @@ block content
   body
     .topnav
       a.active(href='/') Home
-      a(href='/passenger_view_rides') View Rides Available
-      a(href='/passenger_manage_bids') View bids record
+      a(href='/rides') View Rides Available
+      a(href='/bids') View bids record
       a(href='/about') About
