Update admin page

--- a/views/add_user.jade
+++ b/views/add_user.jade
@@ -8,7 +8,7 @@ block content
             input(name='username', type='text')
         .form-group
             label Name:
-            input(name='name', type='text'')
+            input(name='name', type='text')
         .form-group
             label Password:
             input(name='password', type='text')
