--- a/views/add_ride.jade
+++ b/views/add_ride.jade
@@ -26,4 +26,4 @@ block content
       input(name='status', type='text')
     input(type='submit', name='submit', value='Save')
 
-    a(href='/rides/#{ride_id}') Back
+    a(href='/passengers/rides') Back
