--- a/views/rides.jade
+++ b/views/rides.jade
@@ -12,7 +12,7 @@ block content
         td
           a(href='/rides/#{ride.ride_id}') #{ride.ride_id}
         td
-          #{ride.rideOwner}
+          Driver: #{ride.rideOwner}
         td From #{ride.source} to #{ride.destination} at time #{ride.start_time}
         td
           a(href='/passengers/bids/add/#{ride.ride_id}') Ride
