--- a/views/passengerHome.jade
+++ b/views/passengerHome.jade
@@ -9,5 +9,5 @@ block content
     .topnav
       a.active(href='/') Home
       a(href='/rides') View Rides Available
-      a(href='/bids') View bids record
+      a(href='/passengers/bids') View bids record
       a(href='/about') About
