--- a/views/rides.jade
+++ b/views/rides.jade
@@ -15,4 +15,4 @@ block content
           Driver: #{ride.rideOwner}
         td From #{ride.source} to #{ride.destination} at time #{ride.start_time}
         td
-          a(href='/passengers/bids/add/#{ride.ride_id}') Ride
+          a(href='/passengers/bids/add/#{ride.ride_id}') Bid
