--- a/views/own_bids.jade
+++ b/views/own_bids.jade
@@ -17,4 +17,4 @@ block content
         td
           a(class="btn btn-tiny btn-danger" href="/bids/delete/#{bid.bid_id}") Delete
         td
-          a(class="btn btn-tiny btn-primary" href="/bids/acceptBid/#{bid.car}") Accept
+          a(class="btn btn-tiny btn-primary" href="/bids/acceptBid/#{bid.bid_id}") Accept
