add search function

--- a/views/passengerHome.jade
+++ b/views/passengerHome.jade
@@ -8,7 +8,7 @@ block content
   body
     .topnav
       a.active(href='/') Home
-      a(href='/rides') View Rides Available
+      a(href='/passengers/rides') View Rides Available
       a(href='/passengers/bids') View Bids Record
       a(href='/passengers/history') View History
       a(href='/about') About
