--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,4 @@
-extends layout
+extends ./layout.jade
 
 block content
   head
@@ -6,8 +6,4 @@ block content
     link(rel='stylesheet', href='/stylesheets/style.css')
 
   body
-    .topnav
-      a.active(href='home') Home
-      a(href='/login') Login
-      a(href='/register') Sign Up
-      a(href='/about') About
+    
