--- a/views/passengerHome.jade
+++ b/views/passengerHome.jade
@@ -1,13 +1,9 @@
-extends layout
+extends ./layout.jade
 
 block content
   head
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', href='/stylesheets/style2.css')
-
   body
-    .topnav
-      a.active(href='/') Home
-      a(href='/rides') View Rides Available
-      a(href='/passengers/bids') View bids record
-      a(href='/about') About
+
+    
