--- a/views/own_rides.jade
+++ b/views/own_rides.jade
@@ -10,9 +10,7 @@ block content
     each ride, i in rides
       tr
         td
-          a(href='/rides/#{ride.ride_id}') #{ride.ride_id}
-        td
-          Driver: #{ride.rideOwner}
+          a(href="/rides/#{ride.ride_id}") #{ride.ride_id}
         td From #{ride.source} to #{ride.destination} at time #{ride.start_time}
         td
-          a(href='/passengers/bids/add/#{ride.ride_id}') Ride
+          a(href="/rides/delete/#{ride.ride_id}") Delete
