--- a/views/add_ride.jade
+++ b/views/add_ride.jade
@@ -20,4 +20,4 @@ block content
       input(name='number_passenger', type='text')
     input(type='submit', name='submit', value='Save')
 
-    a(href='/passengers/rides') Back
+    a(href='/driverHome') Back
