Fix UI and layout

--- a/views/add_ride.jade
+++ b/views/add_ride.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 #{title}
+  h1 #{title}: As a driver, create a ride here
   form(method='post', action='/rides/createRide')
     .form-group
       label Car:
