--- a/views/driver_history.jade
+++ b/views/driver_history.jade
@@ -5,8 +5,7 @@ block content
 
   table(class='table table-striped')
     tr
-      th History of rides
-      th
+      th As a driver, here are your past rides
     each ride, i in rides
       tr
         td
