--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,17 +12,18 @@ html
         .topnav
           a.active(href='/driverHome') Home
           a(href='/rides/add_ride') Create ride
-          a(href='/rides') View all current rides
+          a(href='/passengers/rides') View all current rides
           a(href='/rides/own_rides') View own current rides
-          a(href='/bids/own_bids') View current bids for own rides
-          a(href='/drivers/history') History
-          a(href='/logout') Log out
+          a(href='/bids/own_bids') View current bids for own rides as driver
+          a(href='/passengers/bids') View bids record as passenger
+          a(href='/drivers/history') Past rides as driver
+          a(href='/logout') Logout
       else
         .topnav
           a.active(href='/passengerHome') Home
-          a(href='/passengers/rides') View Rides Available
-          a(href='/passengers/bids') View bids record
-          a(href='/logout') Log out
+          a(href='/passengers/rides') View all current rides
+          a(href='/passengers/bids') View bids record as passenger
+          a(href='/logout') Logout
     else
       .topnav
         a.active(href='/') Home
