--- a/views/own_bids.jade
+++ b/views/own_bids.jade
@@ -5,8 +5,7 @@ block content
 
   table(class='table table-striped')
     tr
-      th All bids We Have
-      th
+      th As a driver, here are the bids for your own rides
     each bid, i in bids
       tr
         td Passenger: #{bid.passenger}
