--- a/views/own_rides.jade
+++ b/views/own_rides.jade
@@ -5,8 +5,7 @@ block content
 
   table(class='table table-striped')
     tr
-      th Rides available
-      th
+      th As a driver, here are the rides that you have created
     each ride, i in rides
       tr
         td
