--- a/views/own_bids.jade
+++ b/views/own_bids.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h2 Bids for Own Rides
+  h2 Bids For Driver's Own Rides
 
   table(class='table table-striped')
     tr
