--- a/views/about.jade
+++ b/views/about.jade
@@ -4,19 +4,16 @@ block content
   head
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', href='/stylesheets/style3.css')
-  
+
   body
     .topnav
-      a.active(href='about') About
-      a(href='/') Home
-
     .background
-      
-    h1 About Us
-    p 
-    |We ignite opportunity by setting the world in motion
-    |Good things happen when people can move, whether across town or towards their dreams.
-    |Opportunities appear, open up, become reality. What started as a way to tap a button 
-    |to get a ride has led to billions of moments of human connection as people around the 
-    |world go all kinds of places in all kinds of ways with the help of our technology.
 
+    h1 About Us
+    p
+    |If the user logs in as a driver, he/she has the access to both the driver and passenger features.
+    |The driver features are to create a ride, view current own rides that has been created, view bids for current own rides, view past own rides.
+    |The passenger features are to view all current rides, current own bids for other rides, past own bids.
+    p
+    |If the user logs in as a passenger, he/she only has the access to the passenger features.
+    |The passenger features are to view all current rides, current own bids for other rides, past own bids.
