--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,6 +11,7 @@ html
       if (currentDriver)
         .topnav
           a.active(href='/driverHome') Home
+          a(href='/cars') Manage Cars
           a(href='/rides/add_ride') Create Ride
           a(href='/passengers/rides') All Current Rides
           a(href='/rides/own_rides') Own Current Rides As Driver
